# hms-gmail

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  hms-gmail.service
.github/workflows/: docker-build.yml
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/src/app/models/: email.model.ts
frontend/src/app/pages/backup/: backup.ts
frontend/src/app/pages/email/: email.ts
frontend/src/app/pages/search/: search.ts
frontend/src/app/pages/thread/: thread.ts
frontend/src/app/services/: gmail.service.ts
scripts/: coverage.sh
src/: main.cpp
src/api/controllers/: BackupController.cpp  BackupController.h  HealthController.cpp  HealthController.h  SearchController.cpp  SearchController.h
src/backup/: BackupManager.cpp  BackupManager.h
src/config/: AppConfig.cpp  AppConfig.h
src/db/: Database.cpp  Database.h
src/embedding/: EmbeddingWorker.cpp  EmbeddingWorker.h
src/gmail/: GmailClient.cpp  GmailClient.h  OAuthManager.cpp  OAuthManager.h  SyncManager.cpp  SyncManager.h
src/indexer/: Indexer.cpp  Indexer.h
src/mime/: MimeParser.cpp  MimeParser.h
src/mqtt/: MqttClient.cpp  MqttClient.h
src/scheduler/: CronScheduler.h
src/search/: SearchEngine.cpp  SearchEngine.h
tests/: test_config.cpp  test_embedding_worker.cpp  test_gmail_client.cpp  test_indexer.cpp  test_mime_parser.cpp  test_oauth_manager.cpp  test_search_engine.cpp
